--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -1,10 +1,14 @@
 {
     "LanguageNotice.title": "Salut!",
-    "LanguageNotice.text": "Nous expérimentons un soutien initial pour les langues nationales. Nous sommes dans une phase très préliminaire, mais nous espérons être en mesure de prendre en charge plus de langues, bientôt.",
+    "LanguageNotice.text": "Salut!",
     "LanguageNotice.useEnglish": "Utiliser l'anglais",
 
     "Lcars.copyright": "STAR TREK et les marques et logos associés sont des marques commerciales de CBS Studios Inc. Tous droits réservés.",
     "Lcars.credits": "Crédits",
+    "Lcars.feedback": "Votre Avis",
+    "Lcars.history": "Historique",
+    "Lcars.news": "Actualités",
+    "Lcars.profile": "Profil",
 
     "EraSelectionPage.sourceInstruction": "Sélectionnez les sources. Demandez à votre MJ lesquels sont disponibles.",
     "EraSelectionPage.sourceNote": "Certaines sources ne sont pas encore mises en œuvre; Revenez bientôt!",
@@ -29,12 +33,35 @@
     "AddCharacterView.errorCharacterType": "Nous ne supportons que les personnages, pour le moment. Pas des vaisseaux spatiaux.",
     "AddCharacterView.characterPrefix": "Personnage:",
 
+    "CustomSpeciesDetails.speciesName": "Nom",
+    "CustomSpeciesDetails.instruction": "Quel est le nom de cette espèce?",
+    "CustomSpeciesDetails.speciesNameWarning": "Merci de fournir un nom pour cette espèce",
+
+    "SpeciesDetails.options": "Option d'espèce",
+    "SpeciesDetails.selectThree": "(Choisir trois)",
+    "SpeciesDetails.allowCrossSpecies": "Autoriser les talents inter-espèces (Decision du GM)",
+    "SpeciesDetails.allowEsoteric": "Autoriser les talents ésoteriques (Decision du GM)",
+
     "StarshipToolSelection.instruction": "Sélectionnez une option",
-    "StarshipToolSelection.standardBuild": "Construction standard",
+    "StarshipToolSelection.standardBuild": "Construction Standard",
     "StarshipToolSelection.standardBuildDescription": "Le processus standard de création d'un Vaisseau suit les étapes de construction décrites dans les livres de règles. Par exemple: les vaisseaux spatiaux choisissent une trame spatiale, un profil de mission, etc.",
-    "StarshipToolSelection.simplifiedBuild": "Construction simplifiée",
+    "StarshipToolSelection.simplifiedBuild": "Construction Simplifiée",
     "StarshipToolSelection.simplifiedBuildDescription": "La version simplifiée est une bonne option pour transcrire un ensemble de statistiques, par exemple à partir d'une source en ligne ou d'une autre référence.",
 
+    "StarshipTypeSelection.campaignYear": "Année de Campagne",
+    "StarshipTypeSelection.instruction": "Quelle est l'année de votre campagne?\n\nVous devez probablement consulter votre GM. Une année par défaut est renseignée en fonction de l'ère choisie",
+    "StarshipTypeSelection.year": "Année",
+    "StarshipTypeSelection.shipPolity": "Type de Vaisseau",
+    "StarshipTypeSelection.whatShipPolity": "Quel est le type de vaisseau?",
+    "StarshipTypeSelection.shipBuildType": "Taille du Vaisseau",
+    "StarshipTypeSelection.whatShipBuildType": "Quel est la taille du vaisseau?",
+
+    "StarshipPage.whatScale": "Quel est la largeur du vaisseau",
+    "StarshipPage.whatClass": "Quel est le nom de la classe du vaisseau?",
+    "StarshipPage.whatYear": "Quel est la date de la mise en service de la classe de vaisseau",
+    "StarshipPage.class": "Classe",
+
+    "ToolSelection.instruction": "Que voulez vous créer?",
     "ToolSelection.mainCharacter": "Personnage principal",
     "ToolSelection.supportingCharacter": "Personnage secondaire",
     "ToolSelection.starship": "Vaisseau spatial",
@@ -49,11 +76,13 @@
     "Common.button.add": "Ajouter",
     "Common.button.cancel": "Annuler",
     "Common.button.next": "Prochain",
+    "Common.button.view": "Vue",
 
     "Construct.other.assignment": "Mission",
     "Construct.other.attributes": "Attributs",
     "Construct.other.crew": "Équipage",
     "Construct.other.departments": "Departements",
+    "Construct.other.determination": "Détermination",
     "Construct.other.disciplines": "Disciplines",
     "Construct.other.environment": "Environnement",
     "Construct.other.equipment": "Équipement",
@@ -68,14 +97,16 @@
     "Construct.other.scale": "Echelle",
     "Construct.other.serviceDate": "Date de mise en service",
     "Construct.other.shields": "Boucliers",
-    "Construct.other.spaceFrame": "Armature",
+    "Construct.other.spaceFrame": "Modèle de Vaisseau",
     "Construct.other.specialRules": "Règles spéciales",
     "Construct.other.species": "Espèce",
     "Construct.other.stress": "Stress",
     "Construct.other.systems": "Systèmes",
     "Construct.other.talents": "Talents",
+    "Construct.other.trait": "Trait",
     "Construct.other.traits": "Traits",
     "Construct.other.upbringing": "Education",
+    "Construct.other.value": "Valeur",
     "Construct.other.values": "Valeurs",
     "Construct.other.weapons": "Armes",
 
@@ -111,6 +142,8 @@
     "Page.title.era": "Ère",
     "Page.title.talentsOverview": "Vue d'ensemble des talents",
     "Page.title.creditsPage": "Crédits",
+    "Page.title.finish": "Touches Finales",
+    "Page.title.customSpeciesDetails": "Détails de Race Personalisé",
     "Page.title.viewSheet": "Voir la feuille",
     "Page.title.supportingCharacter": "Personnage secondaire",
     "Page.title.characterType": "Type de personnage",
@@ -118,7 +151,56 @@
     "Page.title.sectorDetails": "Détails du secteur",
     "Page.title.starSystemDetails": "Détails du système stellaire",
     "Page.title.starshipToolSelection": "Outils de vaisseau spatial",
+    "Page.title.toolSelection": "Selection d'Outil",
     "Page.title.gamemasterTrackerPage": "Suivi",
+    "Page.title.customSpaceframe": "Création de Modèle de Vaiseau",
+    "Page.title.finalStarshipDetails": "Détails Finaux du Vaisseau",
+    "Page.title.missionPodSelection": "Selection des Nacelles de Mission",
+    "Page.title.missionProfileSelection": "Selection du Profil de Mission",
+    "Page.title.missionProfileTalentSelection": "Talent du Profil de mission",
+    "Page.title.simpleStarship": "Creation de Vaisseau Simplifiée",
+    "Page.title.smallCraftStats": "Navette",
+    "Page.title.spaceframeOption": "Option de Modèle",
+    "Page.title.spaceframeSelection": "Modèle de Vaisseau",
+    "Page.title.starshipTalentSelection": "Talents de Vaisseau",
+    "Page.title.starshipTypeSelection": "Type de Vaisseau",
+    "Page.title.starshipWeaponsSelection": "Armes de Vaisseau",
 
-    "Page.breadcrumb.characterCreation": "Création de personnages"
+    "Page.breadcrumb.characterCreation": "Création de personnages",
+    "Page.breadcrumb.starshipCreation": "Règles de Base",
+
+    "Source.type.coreBook": "Livres de Règles ",
+    "Source.type.divisionBook": "Livres des Divisions",
+    "Source.type.quadrantBook": "Livres des Quadrants",
+    "Source.type.crewBook": "Lives d'Equipages",
+    "Source.type.campaignBook": "Livres de Campagne",
+    "Source.type.expansion": "Livres d'Extensions",
+    "Source.type.misc": "Divers/Autres",
+
+    "Source.book.core": "Règles de Base",
+    "Source.book.alphaQuadrant": "Quadrant Alpha",
+    "Source.book.betaQuadrant": "Quadrant Bêta",
+    "Source.book.gammaQuadrant": "Quadrant Gamma",
+    "Source.book.deltaQuadrant": "Quadrant Delta",
+    "Source.book.commandDivision": "Division: Commandement",
+    "Source.book.operationsDivision": "Division: Opérations",
+    "Source.book.sciencesDivision": "Division: Science",
+    "Source.book.tng": "TNG",
+    "Source.book.ds9": "DS9",
+    "Source.book.voyager": "Voyager",
+    "Source.book.theseAreTheVoyages": "These are the Voy",
+    "Source.book.tribblePlayerCharacter": "Tribule PDF",
+    "Source.book.klingonCore": "Klingon",
+    "Source.book.shackletonExpanse": "Etendue Shakleton",
+    "Source.book.idwYearFive": "IDW Année Cinq",
+    "Source.book.playersGuide": "Guide du Joueur",
+    "Source.book.tricorderSet": "Kit Tricorder",
+    "Source.book.discoveryS1S2": "Discovery S1/S2",
+    "Source.book.discoveryCampaign": "Picard S1",
+    "Source.book.picardS1": "Campagne Discovery",
+    "Source.book.utopiaPlanitia": "Utopia Planitia",
+
+    "Era.name.enterprise": "Enterprise (22ème Siècle)",
+    "Era.name.originalSeries": "Serie Originale (23ème Siècle)",
+    "Era.name.nextGeneration": "Nouvelle Génération (24ème Siècle)"
 }
