- translation of the supporting character page, the character sheet dialog, and the profile option in the LCARS border

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -81,6 +81,7 @@
 
     "Construct.other.assignment": "Zuweisung",
     "Construct.other.attributes": "Attribute",
+    "Construct.other.characterType": "Charakter-Typ",
     "Construct.other.crew": "Crew",
     "Construct.other.departments": "Abteilungen",
     "Construct.other.determination": "Entschlossenheit",
