--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -33,6 +33,9 @@
     "AddCharacterView.errorCharacterType": "Whoops! We only support characters, at the moment. Not starships.",
     "AddCharacterView.characterPrefix": "Character:",
 
+    "CharacterSheetDialog.title": "Choose Template",
+    "CharacterSheetDialog.thumbnail": "Thumbnail",
+
     "CustomSpeciesDetails.speciesName": "Name",
     "CustomSpeciesDetails.instruction": "What's the name of this species?",
     "CustomSpeciesDetails.speciesTrait": "Each species gets a species-specific trait that may provide additional benefits in special circumstances.",
@@ -62,6 +65,17 @@
     "StarshipPage.whatYear": "What year did this spaceframe enter service?",
     "StarshipPage.class": "Class",
 
+    "SupportingCharacter.whatType": "Choose a character type.",
+    "SupportingCharacter.howOld": "How old is this character?",
+    "SupportingCharacter.purposeOrDepartment": "Purpose/Department",
+    "SupportingCharacter.whatPurpose": "Determine what purpose the Supporting Character will fill. Are they an engineer, or a doctor, or a scientist, or a security officer?",
+    "SupportingCharacter.speciesAndAttributes": "Species & Attributes",
+    "SupportingCharacter.speciesAndAttributesInstruction": "Assign Attribute scores and choose the character's species. The chosen species will affect the final Attribute scores. Select two different values to swap them.",
+    "SupportingCharacter.disciplineInstruction": "Assign the character's Disciplines. The highest value should match up with the department/purpose of the character. Select two different values to swap them.",
+    "SupportingCharacter.focusInstruction": "Choose three Focuses for the character. At least one should reflect the department/purpose of the character.",
+    "SupportingCharacter.nameAndRank": "Name & Rank",
+    "SupportingCharacter.nameAndRankInstruction": "Give the character an appropriate name and rank. Supporting Characters should never have a rank above Lieutenant and may often be enlisted personnel rather than officers.",
+
     "ToolSelection.instruction": "What do you want to create?",
     "ToolSelection.mainCharacter": "Main Character",
     "ToolSelection.supportingCharacter": "Supporting Character",
@@ -79,19 +93,32 @@
     "Common.button.next": "Next",
     "Common.button.view": "View",
 
+    "Common.text.none": "None",
+
     "Construct.other.assignment": "Assignment",
     "Construct.other.attributes": "Attributes",
+    "Construct.other.career": "Career",
+    "Construct.other.careerEvent1": "Career Event 1",
+    "Construct.other.careerEvent2": "Career Event 2",
+    "Construct.other.careerEvents": "Career Events",
+    "Construct.other.characterType": "Character Type",
     "Construct.other.crew": "Crew",
     "Construct.other.departments": "Departments",
     "Construct.other.determination": "Determination",
     "Construct.other.disciplines": "Disciplines",
     "Construct.other.environment": "Environment",
     "Construct.other.equipment": "Equipment",
+    "Construct.other.focus": "Focus",
+    "Construct.other.focus1": "Focus 1",
+    "Construct.other.focus2": "Focus 2",
+    "Construct.other.focus3": "Focus 3",
     "Construct.other.focuses": "Focuses",
+    "Construct.other.job": "Job",
     "Construct.other.missionProfile": "Mission Profile",
     "Construct.other.name": "Name",
     "Construct.other.pronouns": "Pronouns",
     "Construct.other.power": "Power",
+    "Construct.other.purpose": "Purpose",
     "Construct.other.rank": "Rank",
     "Construct.other.refits": "Refits",
     "Construct.other.resistance": "Resistance",
@@ -104,6 +131,7 @@
     "Construct.other.stress": "Stress",
     "Construct.other.systems": "Systems",
     "Construct.other.talents": "Talents",
+    "Construct.other.training": "Training",
     "Construct.other.trait": "Trait",
     "Construct.other.traits": "Traits",
     "Construct.other.upbringing": "Upbringing",
@@ -169,6 +197,7 @@
 
     "Page.breadcrumb.characterCreation": "Character Creation",
     "Page.breadcrumb.starshipCreation": "Starship Creation",
+    "Page.breadcrumb.supportingCharacterCreation": "Supporting Character Creation",
 
     "Source.type.coreBook": "Core Rulebooks",
     "Source.type.divisionBook": "Division Books",
