--- a/WebTools/src/i18n/locales/es/translations.json
+++ b/WebTools/src/i18n/locales/es/translations.json
@@ -56,6 +56,7 @@
 
     "Construct.other.assignment": "Asignación",
     "Construct.other.attributes": "Atributos",
+    "Construct.other.characterType": "Tipo de carácter",
     "Construct.other.crew": "Tripulación",
     "Construct.other.departments": "Departamentos",
     "Construct.other.determination": "Determinación",
