--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -1,6 +1,6 @@
 {
     "LanguageNotice.title": "Salut!",
-    "LanguageNotice.text": "Salut!",
+    "LanguageNotice.text": "Nous expérimentons un soutien initial pour les langues nationales. Nous sommes dans une phase très préliminaire, mais nous espérons être en mesure de prendre en charge plus de langues, bientôt.",
     "LanguageNotice.useEnglish": "Utiliser l'anglais",
 
     "Lcars.copyright": "STAR TREK et les marques et logos associés sont des marques commerciales de CBS Studios Inc. Tous droits réservés.",
@@ -80,6 +80,7 @@
 
     "Construct.other.assignment": "Mission",
     "Construct.other.attributes": "Attributs",
+    "Construct.other.characterType": "Type de personnage",
     "Construct.other.crew": "Équipage",
     "Construct.other.departments": "Departements",
     "Construct.other.determination": "Détermination",
