--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -1,6 +1,6 @@
 Language,en,de,es,fr
 LanguageNotice.title,Hello There!,Hallo!,¡Hola!,Salut!
-LanguageNotice.text,"We're experimenting with some initial support for national languages. We're in a very preliminary stage, but we hope to be able to support more languages, soon.","Wir experimentieren mit einer grundlegenden Unterstützung für Landessprachen. Wir befinden uns in einem sehr frühen Stadium, aber wir hoffen, bald weitere Sprachen unterstützen zu können.","Estamos experimentando con algún soporte inicial para los idiomas nacionales. Estamos en una etapa muy preliminar, pero esperamos poder soportar más idiomas, pronto.",Salut!
+LanguageNotice.text,"We're experimenting with some initial support for national languages. We're in a very preliminary stage, but we hope to be able to support more languages, soon.","Wir experimentieren mit einer grundlegenden Unterstützung für Landessprachen. Wir befinden uns in einem sehr frühen Stadium, aber wir hoffen, bald weitere Sprachen unterstützen zu können.","Estamos experimentando con algún soporte inicial para los idiomas nacionales. Estamos en una etapa muy preliminar, pero esperamos poder soportar más idiomas, pronto.","Nous expérimentons un soutien initial pour les langues nationales. Nous sommes dans une phase très préliminaire, mais nous espérons être en mesure de prendre en charge plus de langues, bientôt."
 LanguageNotice.useEnglish,Use English instead,Englisch verwenden,Usar inglés,Utiliser l'anglais
 Lcars.copyright,STAR TREK and related marks and logos are trademarks of CBS Studios Inc. All Rights Reserved.,STAR TREK und zugehörige Marken und Logos sind Marken von CBS Studios Inc. Alle Rechte vorbehalten.,STAR TREK y las marcas y logotipos relacionados son marcas comerciales de CBS Studios Inc. Todos los derechos reservados.,STAR TREK et les marques et logos associés sont des marques commerciales de CBS Studios Inc. Tous droits réservés.
 Lcars.credits,Credits,Danksagungen,Créditos,Crédits
@@ -26,6 +26,8 @@ AddCharacterView.instruction,Paste in the URL for a character.,Fügen Sie die UR
 AddCharacterView.errorMessage,This url does not look valid.,Diese URL sieht nicht gültig aus.,Esta URL no parece válida.,Cette URL ne semble pas valide.
 AddCharacterView.errorCharacterType,"Whoops! We only support characters, at the moment. Not starships.",Hoppla! Wir unterstützen im Moment nur Charaktere. Keine Raumschiffe.,"¡Gritos! Solo admitimos personajes, por el momento. No naves espaciales.","Nous ne supportons que les personnages, pour le moment. Pas des vaisseaux spatiaux."
 AddCharacterView.characterPrefix,Character:,Charakter:,Carácter:,Personnage:
+CharacterSheetDialog.title,Choose Template,,,
+CharacterSheetDialog.thumbnail,Thumbnail,,,
 CustomSpeciesDetails.speciesName,Name,Name,,Nom
 CustomSpeciesDetails.instruction,What's the name of this species?,Wie lautet der Name dieser Spezis?,,Quel est le nom de cette espèce?
 CustomSpeciesDetails.speciesTrait,Each species gets a species-specific trait that may provide additional benefits in special circumstances.,"Jede Spezies erhält ein bestimmtest Talent, das in bestimmten Situationen zusätzliche Vorteile verleihen kann.",,
@@ -54,6 +56,16 @@ StarshipPage.whatScale,How large is this ship?,Wie groß ist das Schiff?,,Quel e
 StarshipPage.whatClass,What's the name of the ship's class?,Wie lautet der Name der Schiffsklasse?,,Quel est le nom de la classe du vaisseau?
 StarshipPage.whatYear,What year did this spaceframe enter service?,In welchem Jahr ist diese Schiffsklasse in Dienst gestellt worden?,,Quel est la date de la mise en service de la classe de vaisseau
 StarshipPage.class,Class,Klasse,Clase,Classe
+SupportingCharacter.whatType,Choose a character type.,,,
+SupportingCharacter.howOld,How old is this character?,,,
+SupportingCharacter.purposeOrDepartment,Purpose/Department,,,
+SupportingCharacter.whatPurpose,"Determine what purpose the Supporting Character will fill. Are they an engineer, or a doctor, or a scientist, or a security officer?",,,
+SupportingCharacter.speciesAndAttributes,Species & Attributes,,,
+SupportingCharacter.speciesAndAttributesInstruction,Assign Attribute scores and choose the character's species. The chosen species will affect the final Attribute scores. Select two different values to swap them.,,,
+SupportingCharacter.disciplineInstruction,Assign the character's Disciplines. The highest value should match up with the department/purpose of the character. Select two different values to swap them.,,,
+SupportingCharacter.focusInstruction,Choose three Focuses for the character. At least one should reflect the department/purpose of the character.,,,
+SupportingCharacter.nameAndRank,Name & Rank,,,
+SupportingCharacter.nameAndRankInstruction,Give the character an appropriate name and rank. Supporting Characters should never have a rank above Lieutenant and may often be enlisted personnel rather than officers.,,,
 ToolSelection.instruction,What do you want to create?,Was soll erstellt werden?,¿Qué quieres crear?,Que voulez vous créer?
 ToolSelection.mainCharacter,Main Character,Hauptcharakter,Personaje principal,Personnage principal
 ToolSelection.supportingCharacter,Supporting Character,Nebencharakter,Personaje secundario,Personnage secondaire
@@ -69,19 +81,31 @@ Common.button.add,Add,Hinzufügen,Agregar,Ajouter
 Common.button.cancel,Cancel,Abbrechen,Cancelar,Annuler
 Common.button.next,Next,Weiter,Próximo,Prochain
 Common.button.view,View,Anzeigen,Vista,Vue
+Common.text.none,None,,,
 Construct.other.assignment,Assignment,Zuweisung,Asignación,Mission
 Construct.other.attributes,Attributes,Attribute,Atributos,Attributs
+Construct.other.career,Career,,,
+Construct.other.careerEvent1,Career Event 1,,,
+Construct.other.careerEvent2,Career Event 2,,,
+Construct.other.careerEvents,Career Events,,,
+Construct.other.characterType,Character Type,Charakter-Typ,Tipo de carácter,Type de personnage
 Construct.other.crew,Crew,Crew,Tripulación,Équipage
 Construct.other.departments,Departments,Abteilungen,Departamentos,Departements
 Construct.other.determination,Determination,Entschlossenheit,Determinación,Détermination
 Construct.other.disciplines,Disciplines,Disziplinen,Disciplinas,Disciplines
 Construct.other.environment,Environment,Herkunft,Medio ambiente,Environnement
 Construct.other.equipment,Equipment,Ausrüstung,Equipo,Équipement
+Construct.other.focus,Focus,,,
+Construct.other.focus1,Focus 1,,,
+Construct.other.focus2,Focus 2,,,
+Construct.other.focus3,Focus 3,,,
 Construct.other.focuses,Focuses,Fokusse,Atenciónes,Spécialités
+Construct.other.job,Job,,,
 Construct.other.missionProfile,Mission Profile,Missionsprofil,Perfil de la misión,Profil de mission
 Construct.other.name,Name,Name,Nombre,Nom
 Construct.other.pronouns,Pronouns,Pronomen,Pronombres,Pronoms
 Construct.other.power,Power,Energie,Poder,Puissance
+Construct.other.purpose,Purpose,,,
 Construct.other.rank,Rank,Rang,Rango,Rang
 Construct.other.refits,Refits,Nachrüstungen,Refits,Mises à jour
 Construct.other.resistance,Resistance,Widerstand,Resistencia,Résistance
@@ -94,6 +118,7 @@ Construct.other.species,Species,Spezies,Especie,Espèce
 Construct.other.stress,Stress,Anstrengung,Estrés,Stress
 Construct.other.systems,Systems,Systeme,Sistemas,Systèmes
 Construct.other.talents,Talents,Talente,Talentos,Talents
+Construct.other.training,Training,,,
 Construct.other.trait,Trait,Merkmal,Rasgo,Trait
 Construct.other.traits,Traits,Merkmale,Rasgos,Traits
 Construct.other.upbringing,Upbringing,Erziehung,Cría,Education
@@ -153,6 +178,7 @@ Page.title.starshipTypeSelection,Starship Type,Raumschiff-Typ,,Type de Vaisseau
 Page.title.starshipWeaponsSelection,Starship Weapons,Schiffswaffen,,Armes de Vaisseau
 Page.breadcrumb.characterCreation,Character Creation,Charaktererstellung,Creación de personajes,Création de personnages
 Page.breadcrumb.starshipCreation,Starship Creation,Raumschifferstellung,,Règles de Base
+Page.breadcrumb.supportingCharacterCreation,Supporting Character Creation,,,
 Source.type.coreBook,Core Rulebooks,,,Livres de Règles 
 Source.type.divisionBook,Division Books,,,Livres des Divisions
 Source.type.quadrantBook,Quadrant Books,,,Livres des Quadrants
