Per #122, translation introduced a name mistake

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -226,8 +226,8 @@
     "Source.book.playersGuide": "Player's Guide",
     "Source.book.tricorderSet": "Tricorder Set",
     "Source.book.discoveryS1S2": "Discovery S1/S2",
-    "Source.book.discoveryCampaign": "Picard S1",
-    "Source.book.picardS1": "Discovery Campaign",
+    "Source.book.discoveryCampaign": "Discovery Campaign",
+    "Source.book.picardS1": "Picard S1",
     "Source.book.utopiaPlanitia": "Utopia Planitia",
 
     "Era.name.enterprise": "Enterprise (22nd century)",
