--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -197,8 +197,8 @@
     "Source.book.playersGuide": "Guide du Joueur",
     "Source.book.tricorderSet": "Kit Tricorder",
     "Source.book.discoveryS1S2": "Discovery S1/S2",
-    "Source.book.discoveryCampaign": "Picard S1",
-    "Source.book.picardS1": "Campagne Discovery",
+    "Source.book.discoveryCampaign": "Campagne Discovery",
+    "Source.book.picardS1": "Picard S1",
     "Source.book.utopiaPlanitia": "Utopia Planitia",
 
     "Era.name.enterprise": "Enterprise (22ème Siècle)",
