--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -205,8 +205,8 @@ Source.book.idwYearFive,IDW Year Five,,,IDW Année Cinq
 Source.book.playersGuide,Player's Guide,,,Guide du Joueur
 Source.book.tricorderSet,Tricorder Set,,,Kit Tricorder
 Source.book.discoveryS1S2,Discovery S1/S2,,,Discovery S1/S2
-Source.book.discoveryCampaign,Picard S1,,,Picard S1
-Source.book.picardS1,Discovery Campaign,,,Campagne Discovery
+Source.book.discoveryCampaign,Discovery Campaign,,,Campagne Discovery
+Source.book.picardS1,Picard S1,,,Picard S1
 Source.book.utopiaPlanitia,Utopia Planitia,,,Utopia Planitia
 Era.name.enterprise,Enterprise (22nd century),,,Enterprise (22ème Siècle)
 Era.name.originalSeries,Original Series (23rd century),,,Serie Originale (23ème Siècle)
