additional ship outlines; additional translations

--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -33,6 +33,9 @@
     "AddCharacterView.errorCharacterType": "Nous ne supportons que les personnages, pour le moment. Pas des vaisseaux spatiaux.",
     "AddCharacterView.characterPrefix": "Personnage:",
 
+    "CharacterSheetDialog.title": "Choisir un Modèle",
+    "CharacterSheetDialog.thumbnail": "Vignette",
+
     "CustomSpeciesDetails.speciesName": "Nom",
     "CustomSpeciesDetails.instruction": "Quel est le nom de cette espèce?",
     "CustomSpeciesDetails.speciesNameWarning": "Merci de fournir un nom pour cette espèce",
@@ -61,6 +64,17 @@
     "StarshipPage.whatYear": "Quel est la date de la mise en service de la classe de vaisseau",
     "StarshipPage.class": "Classe",
 
+    "SupportingCharacter.whatType": "Choisir un type de personnage",
+    "SupportingCharacter.howOld": "Quel est l'âge de votre personnage",
+    "SupportingCharacter.purposeOrDepartment": "Rôle/Département",
+    "SupportingCharacter.whatPurpose": "Determine quel rôle le personnage remplira. Sera-t'il un ingénieur, ou un docteur, ou un scientifique, ou un officier de sécurité?",
+    "SupportingCharacter.speciesAndAttributes": "Espèce et Attributs",
+    "SupportingCharacter.speciesAndAttributesInstruction": "Assignez les scores d'Attributs et choisissez l'espèce du personnage. L'espèce choisie influera sur les valeurs finales des attributs.",
+    "SupportingCharacter.disciplineInstruction": "Assignez les Disciplines de votre personnage. La plus haute valeur devrait corresponddre au département/rôle de votre personnage",
+    "SupportingCharacter.focusInstruction": "Choisissez trois Spécialités pour votre personnage. Au moins un devrait représenter le département rôle de votre personnage.",
+    "SupportingCharacter.nameAndRank": "Nom & Rang",
+    "SupportingCharacter.nameAndRankInstruction": "Donnez au personnage un nom et un grade approprié. Les personnages secondaires ne peuvent pas avoir un grade supérieur à Lieutenant et sont très sonvant du personnel enrôlé plutôt que des officiers.",
+
     "ToolSelection.instruction": "Que voulez vous créer?",
     "ToolSelection.mainCharacter": "Personnage principal",
     "ToolSelection.supportingCharacter": "Personnage secondaire",
@@ -78,8 +92,14 @@
     "Common.button.next": "Prochain",
     "Common.button.view": "Vue",
 
+    "Common.text.none": "Aucun",
+
     "Construct.other.assignment": "Mission",
     "Construct.other.attributes": "Attributs",
+    "Construct.other.career": "Carrière",
+    "Construct.other.careerEvent1": "Evénement de Carrière 1",
+    "Construct.other.careerEvent2": "Evénement de Carrière 2",
+    "Construct.other.careerEvents": "Evénements de Carrière",
     "Construct.other.characterType": "Type de personnage",
     "Construct.other.crew": "Équipage",
     "Construct.other.departments": "Departements",
@@ -87,11 +107,17 @@
     "Construct.other.disciplines": "Disciplines",
     "Construct.other.environment": "Environnement",
     "Construct.other.equipment": "Équipement",
+    "Construct.other.focus": "Spécialités",
+    "Construct.other.focus1": "Spécialité 1",
+    "Construct.other.focus2": "Spécialité 2",
+    "Construct.other.focus3": "Spécialité 3",
     "Construct.other.focuses": "Spécialités",
+    "Construct.other.job": "Travail",
     "Construct.other.missionProfile": "Profil de mission",
     "Construct.other.name": "Nom",
     "Construct.other.pronouns": "Pronoms",
     "Construct.other.power": "Puissance",
+    "Construct.other.purpose": "Energie",
     "Construct.other.rank": "Rang",
     "Construct.other.refits": "Mises à jour",
     "Construct.other.resistance": "Résistance",
@@ -104,6 +130,7 @@
     "Construct.other.stress": "Stress",
     "Construct.other.systems": "Systèmes",
     "Construct.other.talents": "Talents",
+    "Construct.other.training": "Formation",
     "Construct.other.trait": "Trait",
     "Construct.other.traits": "Traits",
     "Construct.other.upbringing": "Education",
@@ -169,6 +196,7 @@
 
     "Page.breadcrumb.characterCreation": "Création de personnages",
     "Page.breadcrumb.starshipCreation": "Règles de Base",
+    "Page.breadcrumb.supportingCharacterCreation": "Création de Personnage Secondaire",
 
     "Source.type.coreBook": "Livres de Règles ",
     "Source.type.divisionBook": "Livres des Divisions",
